Improved the Android App codebase to fix the Language status sync issue in the dropdown menu in the home screen menu and in the settings menu